# datamodels-context-reduction

./: .gitignore  README.md  fast_l1  pyproject.toml  requirements.txt  setup.py
data/chroma/: chroma.sqlite3
data/instruction-induction-data/: README.md  datamodels  instructions.json
dmcr/: README.md
dmcr/dataloader/: PartialCSVDataLoader.py
dmcr/dataloaders/: PartialCSVDataLoader.py  __init__.py
dmcr/datamodels/: __init__.py  config.py
dmcr/evaluator/: GleuEvaluator.py  Rouge_L_evaluator.py  __init__.py
dmcr/evaluators/: BaseEvaluator.py  BaseReferenceEvaluator.py  BaseUnsupervisedEvaluator.py  GenericEvaluator.py  GleuEvaluator.py  JudgeEvaluator.py  Rouge_L_evaluator.py  Squadv2Evaluator.py  __init__.py
dmcr/models/: BaseLLM.py  BatchInstructModelHF.py  BatchModel.py  GPT2.py  GPT2Parser.py  Gemma2.py  GenericChatInstructModelHF.py  GenericInstructBatchHF.py  GenericInstructHFBatch.py  GenericInstructModelHF.py  GenericIntructModelHF.py  GenericVLLMBatch.py  Llama3_1.py  Llama3_1_Instruct.py  ParserLlama.py  __init__.py
dmcr/pipeline/: BaselinePipeline.py  RAGPipeline.py  __init__.py
dmcr/pipelines/: BaselinePipeline.py  RAGPipeline.py  __init__.py
dmcr/retriever/: BM25.py  NaiveDatamodelsRetriever.py  __init__.py
dmcr/retrievers/: BM25.py  BaseRetriever.py  NaiveDatamodelsRetriever.py  __init__.py
dmcr/utils/: __init__.py  utils.py  (+4 more)
eda/: README.md  instruction_induction_dataset.ipynb
examples/: run_base_pipeline.ipynb
experiments/: README.md
models/: caio.rhoden  datamodels  inmetrics
test/: README.MD  README.md  test_evaluators.py
(+516 files in other folders)
